@@ -631,3 +631,39 @@ INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (21,678
 INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (21,679,'[[Raisecom RC805-240B | http://www.raisecom-international.com/p/RC800120.htm]]');
 INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (21,680,'[[Raisecom RC805-480B | http://www.raisecom-international.com/p/RC800120.htm]]');
 INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,683,'[[Force10 S2410P | http://www.force10networks.com/products/s2410.asp]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,684,'[[Extreme Networks Summit X150-24t | http://www.extremenetworks.com/products/summit-x150.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,685,'[[Extreme Networks Summit X150-48t | http://www.extremenetworks.com/products/summit-x150.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,686,'[[Extreme Networks Summit X150-24p | http://www.extremenetworks.com/products/summit-x150.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,687,'[[Extreme Networks Summit X250e-24t | http://www.extremenetworks.com/products/summit-x250e.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,688,'[[Extreme Networks Summit X250e-48t | http://www.extremenetworks.com/products/summit-x250e.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,689,'[[Extreme Networks Summit X250e-24p | http://www.extremenetworks.com/products/summit-x250e.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,690,'[[Extreme Networks Summit X250e-48p | http://www.extremenetworks.com/products/summit-x250e.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,691,'[[Extreme Networks Summit X250e-24x | http://www.extremenetworks.com/products/summit-x250e.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,692,'[[Extreme Networks Summit X450-24t | http://www.extremenetworks.com/products/summit-x450.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,693,'[[Extreme Networks Summit X450-24x | http://www.extremenetworks.com/products/summit-x450.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,694,'[[Extreme Networks Summit X450a-24t | http://www.extremenetworks.com/products/summit-x450a.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,695,'[[Extreme Networks Summit X450a-48t | http://www.extremenetworks.com/products/summit-x450a.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,696,'[[Extreme Networks Summit X450a-24x | http://www.extremenetworks.com/products/summit-x450a.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,697,'[[Extreme Networks Summit X450e-24p | http://www.extremenetworks.com/products/summit-x450e.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,698,'[[Extreme Networks Summit X450e-48p | http://www.extremenetworks.com/products/summit-x450e.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,699,'[[Extreme Networks Summit 200-24fx | http://www.extremenetworks.com/products/summit-200.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,700,'[[Extreme Networks Summit 200-24 | http://www.extremenetworks.com/products/summit-200.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,701,'[[Extreme Networks Summit 200-48 | http://www.extremenetworks.com/products/summit-200.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,702,'[[Extreme Networks Summit 300-24 | http://www.extremenetworks.com/products/summit-300.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,703,'[[Extreme Networks Summit 300-48 | http://www.extremenetworks.com/products/summit-300.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,704,'[[Extreme Networks Summit 400-24p | http://www.extremenetworks.com/products/summit-400-24p.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,705,'[[Extreme Networks Summit 400-24t | http://www.extremenetworks.com/products/summit-400-24t.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,706,'[[Extreme Networks Summit 400-48t | http://www.extremenetworks.com/products/summit-400-48t.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,707,'[[Extreme Networks Summit48si | http://www.extremenetworks.com/products/summit-48si.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,708,'[[Extreme Networks Alpine 3804 | http://www.extremenetworks.com/products/Alpine-3800.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,709,'[[Extreme Networks Alpine 3808 | http://www.extremenetworks.com/products/Alpine-3800.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,710,'[[Extreme Networks BlackDiamond 6808 | http://www.extremenetworks.com/products/blackdiamond-6800.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,711,'[[Extreme Networks BlackDiamond 8806 | http://www.extremenetworks.com/products/blackdiamond-8800.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,712,'[[Extreme Networks BlackDiamond 8810 | http://www.extremenetworks.com/products/blackdiamond-8800.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,713,'[[Extreme Networks BlackDiamond 10808 | http://www.extremenetworks.com/products/blackdiamond-10808.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,714,'[[Extreme Networks BlackDiamond 12802R | http://www.extremenetworks.com/products/blackdiamond-12800r.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,715,'[[Extreme Networks BlackDiamond 12804R | http://www.extremenetworks.com/products/blackdiamond-12800r.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (12,716,'[[Extreme Networks BlackDiamond 12804C | http://www.extremenetworks.com/products/blackdiamond-12804c.aspx]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (17,717,'[[Cisco ASR 1002 | http://cisco.com/en/US/products/ps9436/index.html]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (17,718,'[[Cisco ASR 1004 | http://cisco.com/en/US/products/ps9437/index.html]]');
+INSERT INTO `Dictionary` (`chapter_no`, `dict_key`, `dict_value`) VALUES (17,719,'[[Cisco ASR 1006 | http://cisco.com/en/US/products/ps9438/index.html]]');
