@@ -940,6 +940,42 @@ CREATE TABLE `IPVirtualService` (
 			$new_words[] = array (2 => 'async serial (DB-9)');  // 681
 			$new_words[] = array (2 => 'async serial (DB-25)'); // 682
 			$new_words[] = array (12 => '[[Force10 S2410P | http://www.force10networks.com/products/s2410.asp]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit X150-24t | http://www.extremenetworks.com/products/summit-x150.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit X150-48t | http://www.extremenetworks.com/products/summit-x150.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit X150-24p | http://www.extremenetworks.com/products/summit-x150.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit X250e-24t | http://www.extremenetworks.com/products/summit-x250e.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit X250e-48t | http://www.extremenetworks.com/products/summit-x250e.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit X250e-24p | http://www.extremenetworks.com/products/summit-x250e.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit X250e-48p | http://www.extremenetworks.com/products/summit-x250e.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit X250e-24x | http://www.extremenetworks.com/products/summit-x250e.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit X450-24t | http://www.extremenetworks.com/products/summit-x450.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit X450-24x | http://www.extremenetworks.com/products/summit-x450.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit X450a-24t | http://www.extremenetworks.com/products/summit-x450a.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit X450a-48t | http://www.extremenetworks.com/products/summit-x450a.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit X450a-24x | http://www.extremenetworks.com/products/summit-x450a.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit X450e-24p | http://www.extremenetworks.com/products/summit-x450e.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit X450e-48p | http://www.extremenetworks.com/products/summit-x450e.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit 200-24fx | http://www.extremenetworks.com/products/summit-200.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit 200-24 | http://www.extremenetworks.com/products/summit-200.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit 200-48 | http://www.extremenetworks.com/products/summit-200.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit 300-24 | http://www.extremenetworks.com/products/summit-300.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit 300-48 | http://www.extremenetworks.com/products/summit-300.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit 400-24p | http://www.extremenetworks.com/products/summit-400-24p.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit 400-24t | http://www.extremenetworks.com/products/summit-400-24t.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit 400-48t | http://www.extremenetworks.com/products/summit-400-48t.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Summit48si | http://www.extremenetworks.com/products/summit-48si.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Alpine 3804 | http://www.extremenetworks.com/products/Alpine-3800.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks Alpine 3808 | http://www.extremenetworks.com/products/Alpine-3800.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks BlackDiamond 6808 | http://www.extremenetworks.com/products/blackdiamond-6800.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks BlackDiamond 8806 | http://www.extremenetworks.com/products/blackdiamond-8800.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks BlackDiamond 8810 | http://www.extremenetworks.com/products/blackdiamond-8800.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks BlackDiamond 10808 | http://www.extremenetworks.com/products/blackdiamond-10808.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks BlackDiamond 12802R | http://www.extremenetworks.com/products/blackdiamond-12800r.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks BlackDiamond 12804R | http://www.extremenetworks.com/products/blackdiamond-12800r.aspx]]');
+			$new_words[] = array (12 => '[[Extreme Networks BlackDiamond 12804C | http://www.extremenetworks.com/products/blackdiamond-12804c.aspx]]');
+			$new_words[] = array (17 => '[[Cisco ASR 1002 | http://cisco.com/en/US/products/ps9436/index.html]]');
+			$new_words[] = array (17 => '[[Cisco ASR 1004 | http://cisco.com/en/US/products/ps9437/index.html]]');
+			$new_words[] = array (17 => '[[Cisco ASR 1006 | http://cisco.com/en/US/products/ps9438/index.html]]');
 			$query[] = "update Dictionary set dict_value = 'async serial (RJ-45)' where dict_key = 29";
 			$query[] = "insert into PortCompat (type1, type2) values (29, 681)";
 			$query[] = "insert into PortCompat (type1, type2) values (29, 682)";
