@@ -1,7 +1,8 @@
 0.14.13
 	new feature: SSV format for RS import
 	new feature: complex VLAN IDs in switchvlans gateway
-	update: Force10, NETGEAR and D-Link switches, Raisecom MUXes
+	update: added Force10, NETGEAR, D-Link and Extreme Networks switches,
+		Raisecom MUXes, updated Cisco routers
 	update: async port type has been split
 	bugfix: make switchvlans gateway work on Linux
 0.14.12 2008-02-29
